--- a/Outfitty/BASE.Resources/Common.et.resx
+++ b/Outfitty/BASE.Resources/Common.et.resx
@@ -14,4 +14,7 @@
     <data name="Privacy" xml:space="preserve">
         <value>Privaatsus</value>
     </data>
+    <data name="MaxLength" xml:space="preserve">
+        <value>Välja {0} maksimum pikkus ei tohi olla suurem kui '{1}'.</value>
+    </data>
 </root>
