--- a/Outfitty/BASE.Resources/Common.resx
+++ b/Outfitty/BASE.Resources/Common.resx
@@ -21,4 +21,7 @@
     <data name="Privacy" xml:space="preserve">
         <value>Privacy</value>
     </data>
+    <data name="MaxLength" xml:space="preserve">
+        <value>The field {0} must be a string or array type with a maximum length of '{1}'.</value>
+    </data>
 </root>
